--- a/css/_autocomplete.css
+++ b/css/_autocomplete.css
@@ -1,3 +1,53 @@
 /**
  * _autocomplete.css
  */
+
+.input-search {
+  margin-bottom: 10px;
+  width: 100%;
+}
+
+.list-results {
+    border: thin solid #ccc;
+    border-top: none;
+    border-bottom: none;
+    left: 4%;
+    position: relative;
+    top: -10px;
+    width: 92%;
+}
+
+.list-results li {
+  border-bottom: thin solid #ccc;
+}
+
+.list-results a {
+  display: block;
+  padding: 15px;
+}
+
+.result-name {
+  transition: all 0.5s ease;
+  -webkit-transition: all 0.5s ease;
+}
+
+.list-results a:hover,
+.list-results a:focus,
+.list-results li.active {
+  background: #efefef;
+}
+
+.list-results a:hover .result-name,
+.list-results a:focus .result-name,
+.list-results li.active .result-name {
+  font-weight: bold;
+  padding-left: 10px;
+}
+
+.result-location {
+  margin-left: 2px;
+}
+
+.section {
+  padding: 250px 0;
+}
