--- a/css/_autocomplete.css
+++ b/css/_autocomplete.css
@@ -3,18 +3,18 @@
  */
 
 .input-search {
-  margin-bottom: 10px;
   width: 100%;
 }
 
 .list-results {
-    border: thin solid #ccc;
-    border-top: none;
-    border-bottom: none;
-    left: 4%;
-    position: relative;
-    top: -10px;
-    width: 92%;
+  background: white;
+  border: thin solid #ccc;
+  border-top: none;
+  border-bottom: none;
+  left: 4%;
+  position: absolute;
+  width: 92%;
+  z-index: 5;
 }
 
 .list-results li {
@@ -23,7 +23,7 @@
 
 .list-results a {
   display: block;
-  padding: 15px;
+  padding: 1em;
 }
 
 .result-name {
@@ -33,21 +33,53 @@
 
 .list-results a:hover,
 .list-results a:focus,
-.list-results li.active {
+.list-results .result-active {
   background: #efefef;
 }
 
 .list-results a:hover .result-name,
 .list-results a:focus .result-name,
-.list-results li.active .result-name {
+.result-active .result-name {
   font-weight: bold;
-  padding-left: 10px;
+  padding-left: 5px;
 }
 
 .result-location {
   margin-left: 2px;
 }
 
-.section {
-  padding: 250px 0;
+.form-search {
+  position: relative;
+}
+
+.container-themes {
+  text-align: center;
+}
+
+.container-themes li {
+  display: inline-block;
+}
+
+.container-themes a {
+  cursor: pointer;
+  display: block;
+  margin: 0 0.5em;
+  padding: 1em;
+  text-transform: uppercase;
+  transition: all 300ms ease;
+  -webkit-transition: all 300ms ease;
+}
+
+.container-themes a:hover,
+.container-themes a:focus {
+  border-bottom: 2px solid #ccc;
+  color: #ccc;
+}
+
+.theme-active a:hover,
+.theme-active a:focus,
+.theme-active a {
+  border-bottom: 2px solid #555;
+  color: #555;
+  font-weight: bold;
 }
