--- a/css/_autocomplete_theme_1.css
+++ b/css/_autocomplete_theme_1.css
@@ -53,6 +53,12 @@
   z-index: 5;
 }
 
+.theme-1 .list-results:not(:empty) {
+  -webkit-box-shadow: 0 10px 6px -6px #777;
+  -moz-box-shadow: 0 10px 6px -6px #777;
+  box-shadow: 0 10px 6px -6px #777;
+}
+
 .theme-1 .list-results li {
   border-bottom: none;
 }
@@ -82,13 +88,13 @@
   text-transform: uppercase;
   transition: none;
   -webkit-transition: none;
-  width: 75%;
+  width: 70%;
 }
 
 .theme-1 .result-location {
   margin-left: 0;
   text-align: right;
-  width: 24%;
+  width: 29%;
 }
 
 .theme-1 .list-results a:hover,
@@ -113,8 +119,4 @@
 
 .theme-1 .form-search {
   position: relative;
-}
-
-.theme-1 .search-tip {
-  display: none;
 }
