--- a/css/_base.css
+++ b/css/_base.css
@@ -16,21 +16,24 @@ a {
   text-decoration: none;
 }
 
+header {
+  border-bottom: thin solid #ccc;
+  padding: 0.4em 0;
+}
+
 .container {
   margin: 0 auto;
   max-width: 95%;
-  padding: 125px 0 0;
   width: 500px;
+}
+
+.container-article-sample {
+  padding-bottom: 100px;
 }
 
 small {
   color: #ccc;
   font-size: 0.8em;
-}
-
-.search-tip::after {
-  content: '';
-  clear: both;
 }
 
 .alert {
