--- a/css/_themes_menu.css
+++ b/css/_themes_menu.css
@@ -4,6 +4,11 @@
 
 .container-themes {
   text-align: center;
+  padding: 100px 0 0;
+}
+
+.list-themes {
+  margin-bottom: 25px;
 }
 
 .container-themes li {
@@ -14,7 +19,7 @@
   cursor: pointer;
   display: block;
   margin: 0 0.5em;
-  padding: 1em;
+  padding: 0.8em 0.4em;
   text-transform: uppercase;
   transition: all 300ms ease;
   -webkit-transition: all 300ms ease;
@@ -29,7 +34,7 @@
 .theme-active a:hover,
 .theme-active a:focus,
 .theme-active a {
-  border-bottom: 2px solid #555;
+  border-bottom: 3px solid #3498db;
   color: #555;
   font-weight: bold;
 }
