--- a/css/_typography.css
+++ b/css/_typography.css
@@ -9,10 +9,13 @@ body {
 h1 {
   color: #ccc;
   display: block;
-  font-size: 1em;
-  margin-bottom: 0.5em;
+  font-size: 0.8em;
+  font-weight: normal;
+  letter-spacing: 0.1em;
   text-align: center;
   text-transform: uppercase;
 }
 
-
+p {
+  margin-bottom: 1.5em;
+}
