--- a/css/_themes_menu.css
+++ b/css/_themes_menu.css
@@ -34,7 +34,7 @@
 .theme-active a:hover,
 .theme-active a:focus,
 .theme-active a {
-  border-bottom: 3px solid #3498db;
+  border-bottom: 3px solid #99B2B7;
   color: #555;
   font-weight: bold;
 }
