Error handling and blur work

--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,7 @@
 @import "_reset.css";
 @import "_base.css";
 @import "_typography.css";
+@import "_alerts.css";
 
 /* Widgets */
 @import "_autocomplete.css";
