New theme-0 scss file to reduce autocomplete css

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,5 +10,6 @@
 
 /* Widgets */
 @import "autocomplete";
+@import "autocomplete-theme-0";
 @import "autocomplete-theme-1";
 @import "themes-menu";
