--- a/public/main.css
+++ b/public/main.css
@@ -124,16 +124,16 @@ header {
 }
 
 /* line 50, ../scss/_base.scss */
-input[type="text"] {
+input[type=text] {
+  border: 1px solid #ccc;
   background-color: #fff;
   background-image: none;
-  border: 1px solid #ccc;
-  border-radius: 20px;
   color: #555;
+  padding: 6px 15px;
   font-size: 14px;
   line-height: 1.5;
   outline: none;
-  padding: 6px 15px;
+  width: 100%;
 }
 
 /**
@@ -188,89 +188,89 @@ small {
  * _autocomplete.scss
  */
 /* line 5, ../scss/_autocomplete.scss */
-.input-search {
-  width: 100%;
-}
-
-/* line 9, ../scss/_autocomplete.scss */
 .list-results {
-  background: white;
-  border: thin solid #ccc;
-  border-top: none;
-  border-bottom: none;
-  left: 4%;
   margin-bottom: 50px;
   position: absolute;
-  width: 92%;
   z-index: 5;
 }
-/* line 20, ../scss/_autocomplete.scss */
-.list-results i {
-  display: none;
-}
-/* line 24, ../scss/_autocomplete.scss */
-.list-results li {
-  border-bottom: thin solid #ccc;
-}
-/* line 28, ../scss/_autocomplete.scss */
+/* line 10, ../scss/_autocomplete.scss */
 .list-results a {
   display: block;
-  padding: 1em;
 }
 
-/* line 34, ../scss/_autocomplete.scss */
-.result-name {
-  transition: all 0.5s ease;
-  -webkit-transition: all 0.5s ease;
-}
-
-/* line 39, ../scss/_autocomplete.scss */
-.result-location {
-  margin-left: 2px;
-}
-
-/* line 43, ../scss/_autocomplete.scss */
-.result-active {
-  background: #efefef;
-}
-/* line 46, ../scss/_autocomplete.scss */
-.result-active .result-name {
-  font-weight: bold;
-  padding-left: 5px;
-}
-
-/* line 52, ../scss/_autocomplete.scss */
+/* line 15, ../scss/_autocomplete.scss */
 .form-search {
   position: relative;
 }
 
 /**
+ * _autocomplete-theme-0.scss
+ */
+/* line 8, ../scss/_autocomplete-theme-0.scss */
+.theme-0 .input-search {
+  border-radius: 20px;
+}
+/* line 12, ../scss/_autocomplete-theme-0.scss */
+.theme-0 .list-results {
+  background: white;
+  border: thin solid #ccc;
+  border-top: none;
+  border-bottom: none;
+  left: 4%;
+  width: 92%;
+}
+/* line 20, ../scss/_autocomplete-theme-0.scss */
+.theme-0 .list-results i {
+  display: none;
+}
+/* line 24, ../scss/_autocomplete-theme-0.scss */
+.theme-0 .list-results li {
+  border-bottom: thin solid #ccc;
+}
+/* line 28, ../scss/_autocomplete-theme-0.scss */
+.theme-0 .list-results a {
+  padding: 1em;
+}
+/* line 33, ../scss/_autocomplete-theme-0.scss */
+.theme-0 .result-name {
+  transition: all 0.5s ease;
+  -webkit-transition: all 0.5s ease;
+}
+/* line 38, ../scss/_autocomplete-theme-0.scss */
+.theme-0 .result-location {
+  margin-left: 2px;
+}
+/* line 42, ../scss/_autocomplete-theme-0.scss */
+.theme-0 .result-active {
+  background: #efefef;
+}
+/* line 45, ../scss/_autocomplete-theme-0.scss */
+.theme-0 .result-active .result-name {
+  font-weight: bold;
+  padding-left: 5px;
+}
+
+/**
  * _autocomplete-theme-1.scss
  *
- * light tan D9CEB2
- * dark tan 948C75
- * faint green D5DED9
- * brown 7A6A53
- * light teal 99B2B7
- * 
- * from palette: http://www.colourlovers.com/palette/77121/Good_Friends
+ * Palette: http://www.colourlovers.com/palette/77121/Good_Friends
  */
-/* line 13, ../scss/_autocomplete-theme-1.scss */
+/* line 14, ../scss/_autocomplete-theme-1.scss */
 .theme-1 {
   font-family: 'Droid Serif', Georgia, Times, serif;
 }
-/* line 16, ../scss/_autocomplete-theme-1.scss */
+/* line 17, ../scss/_autocomplete-theme-1.scss */
 .theme-1 small {
-  color: #D5DED9;
+  color: #D9CEB2;
 }
-/* line 20, ../scss/_autocomplete-theme-1.scss */
+/* line 21, ../scss/_autocomplete-theme-1.scss */
 .theme-1 .input-search-container {
   background: #99B2B7;
   display: inline-block;
   padding: 1em 1em 0;
   width: 100%;
 }
-/* line 27, ../scss/_autocomplete-theme-1.scss */
+/* line 28, ../scss/_autocomplete-theme-1.scss */
 .theme-1 .input-search {
   background: transparent;
   border: none;
@@ -281,7 +281,6 @@ small {
   font-size: 1em;
   line-height: 1.2em;
   padding: 0 0 0.25em;
-  outline: none;
 }
 /* line 40, ../scss/_autocomplete-theme-1.scss */
 .theme-1 ::-webkit-input-placeholder {
@@ -294,40 +293,37 @@ small {
   border-top: 0;
   color: white;
   left: 0;
-  position: absolute;
   width: 100%;
-  z-index: 5;
 }
-/* line 55, ../scss/_autocomplete-theme-1.scss */
+/* line 53, ../scss/_autocomplete-theme-1.scss */
 .theme-1 .list-results:not(:empty) {
   -webkit-box-shadow: 0 10px 6px -6px #777;
   -moz-box-shadow: 0 10px 6px -6px #777;
   box-shadow: 0 10px 6px -6px #777;
 }
-/* line 62, ../scss/_autocomplete-theme-1.scss */
+/* line 60, ../scss/_autocomplete-theme-1.scss */
 .theme-1 .list-results li {
   border-bottom: none;
 }
-/* line 64, ../scss/_autocomplete-theme-1.scss */
+/* line 62, ../scss/_autocomplete-theme-1.scss */
 .theme-1 .list-results li:last-of-type a {
   border-bottom: 0;
 }
-/* line 69, ../scss/_autocomplete-theme-1.scss */
+/* line 67, ../scss/_autocomplete-theme-1.scss */
 .theme-1 .list-results a {
   border-bottom: thin dashed #99B2B7;
-  display: block;
   padding: 1em 0;
   margin-left: 1em;
   margin-right: 1em;
 }
-/* line 78, ../scss/_autocomplete-theme-1.scss */
+/* line 75, ../scss/_autocomplete-theme-1.scss */
 .theme-1 .result-name,
 .theme-1 .result-location {
   display: inline-block;
   vertical-align: middle;
 }
 @media (max-width: 500px) {
-  /* line 78, ../scss/_autocomplete-theme-1.scss */
+  /* line 75, ../scss/_autocomplete-theme-1.scss */
   .theme-1 .result-name,
   .theme-1 .result-location {
     display: block;
@@ -335,39 +331,26 @@ small {
     width: 100%;
   }
 }
-/* line 90, ../scss/_autocomplete-theme-1.scss */
+/* line 87, ../scss/_autocomplete-theme-1.scss */
 .theme-1 .result-name {
   font-family: 'Droid Sans', Georgia, Times, serif;
   font-size: 0.9em;
   letter-spacing: 0.1em;
   text-transform: uppercase;
-  transition: none;
-  -webkit-transition: none;
   width: 70%;
 }
-/* line 100, ../scss/_autocomplete-theme-1.scss */
+/* line 95, ../scss/_autocomplete-theme-1.scss */
 .theme-1 .result-location {
-  margin-left: 0;
   text-align: right;
   width: 29%;
 }
-/* line 106, ../scss/_autocomplete-theme-1.scss */
+/* line 100, ../scss/_autocomplete-theme-1.scss */
 .theme-1 .result-active {
-  background: inherit;
   color: #D9CEB2;
 }
-/* line 110, ../scss/_autocomplete-theme-1.scss */
+/* line 103, ../scss/_autocomplete-theme-1.scss */
 .theme-1 .result-active i {
   display: inline-block;
-}
-/* line 114, ../scss/_autocomplete-theme-1.scss */
-.theme-1 .result-active .result-name {
-  font-weight: normal;
-  padding: 0;
-}
-/* line 120, ../scss/_autocomplete-theme-1.scss */
-.theme-1 .form-search {
-  position: relative;
 }
 
 /**
