--- a/scss/_autocomplete-theme-1.scss
+++ b/scss/_autocomplete-theme-1.scss
@@ -1,24 +1,25 @@
 /**
  * _autocomplete-theme-1.scss
  *
- * light tan D9CEB2
- * dark tan 948C75
- * faint green D5DED9
- * brown 7A6A53
- * light teal 99B2B7
- * 
- * from palette: http://www.colourlovers.com/palette/77121/Good_Friends
+ * Palette: http://www.colourlovers.com/palette/77121/Good_Friends
  */
+
+ $light-tan: #D9CEB2;
+ $dark-tan: #948C75;
+ $faint-green: #D5DED9;
+ $brown: #7A6A53;
+ $light-teal: #99B2B7;
+ $med-teal: #6D7F83;
 
 .theme-1 {
   font-family: 'Droid Serif', Georgia, Times, serif;
 
   small {
-    color: #D5DED9;
+    color: $light-tan;
   }
 
   .input-search-container {
-    background: #99B2B7;
+    background: $light-teal;
     display: inline-block;
     padding: 1em 1em 0;
     width: 100%;
@@ -28,28 +29,25 @@
     background: transparent;
     border: none;
     border-radius: 0;
-    border-bottom: 2px solid #6D7F83;
+    border-bottom: 2px solid $med-teal;
     color: white;
     font-family: 'Droid Serif', Georgia, Times, serif;
     font-size: 1em;
     line-height: 1.2em;
     padding: 0 0 0.25em;
-    outline: none;
   }
 
   ::-webkit-input-placeholder {
-    color: #6D7F83;
+    color: $med-teal;
   }
 
   .list-results {
-    background: #948C75;
-    border: 1em solid #99B2B7;
+    background: $dark-tan;
+    border: 1em solid $light-teal;
     border-top: 0;
     color: white;
     left: 0;
-    position: absolute;
     width: 100%;
-    z-index: 5;
   }
 
   .list-results:not(:empty) {
@@ -67,8 +65,7 @@
     }
 
     a {
-      border-bottom: thin dashed #99B2B7;
-      display: block;
+      border-bottom: thin dashed $light-teal;
       padding: 1em 0;
       margin-left: 1em;
       margin-right: 1em;
@@ -92,32 +89,19 @@
     font-size: 0.9em;
     letter-spacing: 0.1em;
     text-transform: uppercase;
-    transition: none;
-    -webkit-transition: none;
     width: 70%;
   }
 
   .result-location {
-    margin-left: 0;
     text-align: right;
     width: 29%;
   }
 
   .result-active {
-    background: inherit;
-    color: #D9CEB2;
+    color: $light-tan;
 
     i {
       display: inline-block;
     }
-
-    .result-name {
-      font-weight: normal;
-      padding: 0;
-    }
-  }
-
-  .form-search {
-    position: relative;
   }
 }
