--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -47,14 +47,14 @@ header {
   display: none;
 }
 
-input[type="text"] {
+input[type=text] {
+  border: 1px solid #ccc;
   background-color: #fff;
   background-image: none;
-  border: 1px solid #ccc;
-  border-radius: 20px;
   color: #555;
+  padding: 6px 15px;
   font-size: 14px;
   line-height: 1.5;
   outline: none;
-  padding: 6px 15px;
+  width: 100%;
 }
