--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -26,22 +26,22 @@ header {
   max-width: 95%;
   width: 500px;
 }
+// TODO
+// .container-article-sample {
+//   padding-bottom: 100px;
+//   width: 700px;
+// }
 
-.container-article-sample {
-  padding-bottom: 100px;
-  width: 700px;
-}
-
-.article-sample {
-  color: #ccc;
-  font-size: 2em;
-  font-family: times;
-  line-height: 1.2em;
-  margin-top: 25px;
-  filter: blur(5px);
-  text-align: justify;
-  -webkit-filter: blur(5px);
-}
+// .article-sample {
+//   color: #ccc;
+//   font-size: 2em;
+//   font-family: times;
+//   line-height: 1.2em;
+//   margin-top: 25px;
+//   filter: blur(5px);
+//   text-align: justify;
+//   -webkit-filter: blur(5px);
+// }
 
 .hidden {
   display: none;
