--- a/scss/_themes-menu.scss
+++ b/scss/_themes-menu.scss
@@ -2,9 +2,11 @@
  * _themes-menu.scss
  */
 
+$teal: #99B2B7;
+
 .container-themes {
   text-align: center;
-  padding: 100px 0 0;
+  padding: 120px 0 0;
 
   li {
     display: inline-block;
@@ -15,26 +17,53 @@
     display: block;
     margin: 0 0.5em;
     padding: 0.8em 0.4em;
+    position: relative;
     text-transform: uppercase;
-    transition: all 300ms ease;
-    -webkit-transition: all 300ms ease;
 
+    &::after {
+      position: absolute;
+      top: 100%;
+      left: 0;
+      width: 100%;
+      height: 4px;
+      background: rgba(0,0,0,0.1);
+      content: '';
+      opacity: 0;
+      -webkit-transition: opacity 0.3s, -webkit-transform 0.3s;
+      -moz-transition: opacity 0.3s, -moz-transform 0.3s;
+      transition: opacity 0.3s, transform 0.3s;
+      -webkit-transform: translateY(10px);
+      -moz-transform: translateY(10px);
+      transform: translateY(10px);
+    }
     &:hover,
     &:focus {
-      border-bottom: 2px solid #ccc;
       color: #ccc;
+      &::after {
+        opacity: 1;
+        -webkit-transform: translateY(0px);
+        -moz-transform: translateY(0px);
+        transform: translateY(0px);
+      }
     }
   }
 }
 
 .list-themes {
-  margin-bottom: 25px;
+  margin-bottom: 35px;
 }
 
 .theme-active a {
   &, &:hover, &:focus {
-    border-bottom: 3px solid #99B2B7;
     color: #555;
     font-weight: bold;
+    &::after {
+      opacity: 1;
+      -webkit-transform: translateY(0px);
+      -moz-transform: translateY(0px);
+      transform: translateY(0px);
+      background: $teal;
+    }
+    // border-bottom: 4px solid $teal;
   }
 }
