--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -10,6 +10,7 @@ h1 {
   color: #ccc;
   display: block;
   font-size: 0.8em;
+  font-family: 'Droid Serif', Georgia, Times, serif;
   font-weight: normal;
   letter-spacing: 0.1em;
   text-align: center;
