--- a/scss/_autocomplete-theme-1.scss
+++ b/scss/_autocomplete-theme-1.scss
@@ -77,7 +77,26 @@
     font-size: 0.9em;
     letter-spacing: 0.1em;
     text-transform: uppercase;
+    -webkit-transition: color 0.3s;
+    transition: color 0.3s;
     width: 70%;
+
+    &::after {
+      content: "\f138";
+      display: inline-block;
+      font: normal normal normal 14px/1 FontAwesome;
+      font-size: inherit;
+      -moz-osx-font-smoothing: grayscale;
+      opacity: 0;
+      text-rendering: auto;
+      -webkit-font-smoothing: antialiased;
+      -moz-transition: opacity 0.3s, -moz-transform 0.3s;
+      -webkit-transition: opacity 0.3s, -webkit-transform 0.3s;
+      transition: opacity 0.3s, transform 0.3s;
+      -moz-transform: translateX(-10px) rotate(-15deg);
+      -webkit-transform: translateX(-10px) rotate(-15deg);
+      transform: translateX(-10px) rotate(-15deg);
+    }
   }
 
   .result-location {
@@ -88,8 +107,11 @@
   .result-active {
     color: $light-tan;
 
-    .result-name i {
-      display: inline-block;
+    .result-name::after {
+      opacity: 1;
+      -moz-transform: translateX(0px) rotate(0);
+      -webkit-transform: translateX(0px) rotate(0);
+      transform: translateX(0px) rotate(0);
     }
   }
 
