--- a/scss/_autocomplete-theme-0.scss
+++ b/scss/_autocomplete-theme-0.scss
@@ -5,8 +5,20 @@
 
 .theme-0 {
 
+  .input-search-container {
+    position: relative;
+    &::after {
+      @include font-awesome-icon("\f002", 1.5em);
+      color: #ccc;
+      position: absolute;
+      right: 9px;
+      top: 3px;
+    }
+  }
+
   .input-search {
     border-radius: 20px;
+    padding-right: 35px;
   }
 
   .list-results {
@@ -26,9 +38,11 @@
     }
   }
 
-  .result-name {
-    transition: all 0.5s ease;
-    -webkit-transition: all 0.5s ease;
+  .result {
+    position: relative;
+    -moz-transition: background 0.3s ease;
+    -webkit-transition: background 0.3s ease;
+    transition: background 0.3s ease;
   }
 
   .result-location {
@@ -40,7 +54,6 @@
 
     .result-name {
       font-weight: bold;
-      padding-left: 5px;
     }
   }
 }
