--- a/scss/_autocomplete-theme-1.scss
+++ b/scss/_autocomplete-theme-1.scss
@@ -82,14 +82,8 @@
     width: 70%;
 
     &::after {
-      content: "\f138";
-      display: inline-block;
-      font: normal normal normal 14px/1 FontAwesome;
-      font-size: inherit;
-      -moz-osx-font-smoothing: grayscale;
+      @include font-awesome-icon("\f138");
       opacity: 0;
-      text-rendering: auto;
-      -webkit-font-smoothing: antialiased;
       -moz-transition: opacity 0.3s, -moz-transform 0.3s;
       -webkit-transition: opacity 0.3s, -webkit-transform 0.3s;
       transition: opacity 0.3s, transform 0.3s;
