--- a/scss/_autocomplete-theme-1.scss
+++ b/scss/_autocomplete-theme-1.scss
@@ -11,6 +11,18 @@
  $light-teal: #99B2B7;
  $med-teal: #6D7F83;
 
+ $icon-caret: "\f138";
+
+ %result-selected-t1 {
+  .result-name {
+    &::after {
+      -moz-transform: translateX(10px) rotate(360deg);
+      -webkit-transform: translateX(10px) rotate(360deg);
+      transform: translateX(10px) rotate(360deg);
+    }
+  }
+}
+
 .theme-1 {
   font-family: 'Droid Serif', Georgia, Times, serif;
 
@@ -48,15 +60,13 @@
     color: white;
     left: 0;
     width: 100%;
-  }
 
-  .list-results:not(:empty) {
-    -webkit-box-shadow: 0 10px 6px -6px #777;
-    -moz-box-shadow: 0 10px 6px -6px #777;
-    box-shadow: 0 10px 6px -6px #777;
-  }
+    &:not(:empty) {
+      -webkit-box-shadow: 0 10px 6px -6px #777;
+      -moz-box-shadow: 0 10px 6px -6px #777;
+      box-shadow: 0 10px 6px -6px #777;
+    }
 
-  .list-results {
     li {
       border-bottom: none;
       &:last-of-type a {
@@ -69,6 +79,14 @@
       padding: 1em 0;
       margin-left: 1em;
       margin-right: 1em;
+
+      &:active {
+        @extend %result-selected-t1;
+      }
+    }
+
+    .result-selected a {
+      @extend %result-selected-t1;
     }
   }
 
@@ -82,14 +100,14 @@
     width: 70%;
 
     &::after {
-      @include font-awesome-icon("\f138");
+      @include font-awesome-icon($icon-caret);
       opacity: 0;
       -moz-transition: opacity 0.3s, -moz-transform 0.3s;
       -webkit-transition: opacity 0.3s, -webkit-transform 0.3s;
       transition: opacity 0.3s, transform 0.3s;
-      -moz-transform: translateX(-10px) rotate(-15deg);
-      -webkit-transform: translateX(-10px) rotate(-15deg);
-      transform: translateX(-10px) rotate(-15deg);
+      -moz-transform: translateX(-5px) rotate(-15deg);
+      -webkit-transform: translateX(-5px) rotate(-15deg);
+      transform: translateX(-5px) rotate(-15deg);
     }
   }
 
