--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -3,6 +3,8 @@
  */
 
 * {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
@@ -16,32 +18,11 @@ a {
   text-decoration: none;
 }
 
-header {
-  border-bottom: thin solid #ccc;
-  padding: 0.4em 0;
-}
-
 .container {
   margin: 0 auto;
   max-width: 95%;
   width: 500px;
 }
-// TODO
-// .container-article-sample {
-//   padding-bottom: 100px;
-//   width: 700px;
-// }
-
-// .article-sample {
-//   color: #ccc;
-//   font-size: 2em;
-//   font-family: times;
-//   line-height: 1.2em;
-//   margin-top: 25px;
-//   filter: blur(5px);
-//   text-align: justify;
-//   -webkit-filter: blur(5px);
-// }
 
 .hidden {
   display: none;
@@ -49,12 +30,12 @@ header {
 
 input[type=text] {
   border: 1px solid #ccc;
-  background-color: #fff;
+  background-color: white;
   background-image: none;
   color: #555;
-  padding: 6px 15px;
   font-size: 14px;
-  line-height: 1.5;
+  padding: 6px 15px;
+  margin: 0;
   outline: none;
   width: 100%;
 }
