--- a/scss/_themes-menu.scss
+++ b/scss/_themes-menu.scss
@@ -2,8 +2,6 @@
  * _themes-menu.scss
  */
 
-$teal: #99B2B7;
-
 .container-themes {
   text-align: center;
   padding: 120px 0 0;
@@ -62,7 +60,7 @@ $teal: #99B2B7;
       -webkit-transform: translateY(0px);
       -moz-transform: translateY(0px);
       transform: translateY(0px);
-      background: $teal;
+      background: #99B2B7;
     }
   }
 }
