--- a/public/main.css
+++ b/public/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /**
  * main.scss
  */
@@ -72,66 +73,44 @@ table {
  */
 /* line 5, ../scss/_base.scss */
 * {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
-/* line 9, ../scss/_base.scss */
+/* line 11, ../scss/_base.scss */
 body {
   font-family: arial;
   color: #555;
 }
 
-/* line 14, ../scss/_base.scss */
+/* line 16, ../scss/_base.scss */
 a {
   color: inherit;
   text-decoration: none;
 }
 
-/* line 19, ../scss/_base.scss */
-header {
-  border-bottom: thin solid #ccc;
-  padding: 0.4em 0;
-}
-
-/* line 24, ../scss/_base.scss */
+/* line 21, ../scss/_base.scss */
 .container {
   margin: 0 auto;
   max-width: 95%;
   width: 500px;
 }
 
-/* line 30, ../scss/_base.scss */
-.container-article-sample {
-  padding-bottom: 100px;
-  width: 700px;
-}
-
-/* line 35, ../scss/_base.scss */
-.article-sample {
-  color: #ccc;
-  font-size: 2em;
-  font-family: times;
-  line-height: 1.2em;
-  margin-top: 25px;
-  filter: blur(5px);
-  text-align: justify;
-  -webkit-filter: blur(5px);
-}
-
-/* line 46, ../scss/_base.scss */
+/* line 27, ../scss/_base.scss */
 .hidden {
   display: none;
 }
 
-/* line 50, ../scss/_base.scss */
+/* line 31, ../scss/_base.scss */
 input[type=text] {
   border: 1px solid #ccc;
-  background-color: #fff;
+  background-color: white;
   background-image: none;
   color: #555;
-  padding: 6px 15px;
   font-size: 14px;
-  line-height: 1.5;
+  padding: 6px 15px;
+  margin: 0;
   outline: none;
   width: 100%;
 }
@@ -145,22 +124,11 @@ body {
 }
 
 /* line 9, ../scss/_typography.scss */
-h1 {
-  color: #ccc;
-  display: block;
-  font-size: 0.8em;
-  font-weight: normal;
-  letter-spacing: 0.1em;
-  text-align: center;
-  text-transform: uppercase;
-}
-
-/* line 19, ../scss/_typography.scss */
 p {
   margin-bottom: 1.5em;
 }
 
-/* line 23, ../scss/_typography.scss */
+/* line 13, ../scss/_typography.scss */
 small {
   color: #ccc;
   font-size: 0.8em;
@@ -187,18 +155,18 @@ small {
 /**
  * _autocomplete.scss
  */
-/* line 5, ../scss/_autocomplete.scss */
+/* line 16, ../scss/_autocomplete.scss */
 .list-results {
   margin-bottom: 50px;
   position: absolute;
   z-index: 5;
 }
-/* line 10, ../scss/_autocomplete.scss */
+/* line 21, ../scss/_autocomplete.scss */
 .list-results a {
   display: block;
 }
 
-/* line 15, ../scss/_autocomplete.scss */
+/* line 26, ../scss/_autocomplete.scss */
 .form-search {
   position: relative;
 }
@@ -206,11 +174,44 @@ small {
 /**
  * _autocomplete-theme-0.scss
  */
-/* line 8, ../scss/_autocomplete-theme-0.scss */
+/* line 14, ../scss/_autocomplete-theme-0.scss */
+.theme-0 .list-results a:active, .theme-0 .list-results .result-selected a {
+  color: #6D7F83;
+  position: relative;
+  top: 1px;
+}
+
+/* line 22, ../scss/_autocomplete-theme-0.scss */
+.theme-0 .input-search-container {
+  position: relative;
+}
+/* line 24, ../scss/_autocomplete-theme-0.scss */
+.theme-0 .input-search-container::after {
+  content: "";
+  display: inline-block;
+  font: normal normal normal 14px/1 FontAwesome;
+  font-size: 1.5em;
+  text-rendering: auto;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  color: #ccc;
+  position: absolute;
+  right: 7.5px;
+  height: 34px;
+  line-height: 34px;
+  vertical-align: middle;
+  top: 0;
+  width: 23px;
+}
+/* line 37, ../scss/_autocomplete-theme-0.scss */
 .theme-0 .input-search {
   border-radius: 20px;
+  padding-left: 15px;
+  padding-right: 38px;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
-/* line 12, ../scss/_autocomplete-theme-0.scss */
+/* line 45, ../scss/_autocomplete-theme-0.scss */
 .theme-0 .list-results {
   background: white;
   border: thin solid #ccc;
@@ -219,35 +220,32 @@ small {
   left: 4%;
   width: 92%;
 }
-/* line 20, ../scss/_autocomplete-theme-0.scss */
-.theme-0 .list-results i {
-  display: none;
-}
-/* line 24, ../scss/_autocomplete-theme-0.scss */
+/* line 53, ../scss/_autocomplete-theme-0.scss */
 .theme-0 .list-results li {
   border-bottom: thin solid #ccc;
 }
-/* line 28, ../scss/_autocomplete-theme-0.scss */
+/* line 57, ../scss/_autocomplete-theme-0.scss */
 .theme-0 .list-results a {
   padding: 1em;
 }
-/* line 33, ../scss/_autocomplete-theme-0.scss */
-.theme-0 .result-name {
-  transition: all 0.5s ease;
-  -webkit-transition: all 0.5s ease;
+/* line 70, ../scss/_autocomplete-theme-0.scss */
+.theme-0 .result {
+  position: relative;
+  -moz-transition: background 0.3s ease;
+  -webkit-transition: background 0.3s ease;
+  transition: background 0.3s ease;
 }
-/* line 38, ../scss/_autocomplete-theme-0.scss */
+/* line 77, ../scss/_autocomplete-theme-0.scss */
 .theme-0 .result-location {
   margin-left: 2px;
 }
-/* line 42, ../scss/_autocomplete-theme-0.scss */
+/* line 81, ../scss/_autocomplete-theme-0.scss */
 .theme-0 .result-active {
   background: #efefef;
 }
-/* line 45, ../scss/_autocomplete-theme-0.scss */
+/* line 84, ../scss/_autocomplete-theme-0.scss */
 .theme-0 .result-active .result-name {
   font-weight: bold;
-  padding-left: 5px;
 }
 
 /**
@@ -255,22 +253,29 @@ small {
  *
  * Palette: http://www.colourlovers.com/palette/77121/Good_Friends
  */
-/* line 14, ../scss/_autocomplete-theme-1.scss */
+/* line 18, ../scss/_autocomplete-theme-1.scss */
+.theme-1 .list-results a:active .result-name::after, .theme-1 .list-results .result-selected a .result-name::after {
+  -moz-transform: translateX(10px) rotate(360deg);
+  -webkit-transform: translateX(10px) rotate(360deg);
+  transform: translateX(10px) rotate(360deg);
+}
+
+/* line 26, ../scss/_autocomplete-theme-1.scss */
 .theme-1 {
   font-family: 'Droid Serif', Georgia, Times, serif;
 }
-/* line 17, ../scss/_autocomplete-theme-1.scss */
+/* line 29, ../scss/_autocomplete-theme-1.scss */
 .theme-1 small {
-  color: #D9CEB2;
+  color: #D5DED9;
 }
-/* line 21, ../scss/_autocomplete-theme-1.scss */
+/* line 33, ../scss/_autocomplete-theme-1.scss */
 .theme-1 .input-search-container {
   background: #99B2B7;
   display: inline-block;
   padding: 1em 1em 0;
   width: 100%;
 }
-/* line 28, ../scss/_autocomplete-theme-1.scss */
+/* line 40, ../scss/_autocomplete-theme-1.scss */
 .theme-1 .input-search {
   background: transparent;
   border: none;
@@ -282,11 +287,11 @@ small {
   line-height: 1.2em;
   padding: 0 0 0.25em;
 }
-/* line 40, ../scss/_autocomplete-theme-1.scss */
+/* line 52, ../scss/_autocomplete-theme-1.scss */
 .theme-1 ::-webkit-input-placeholder {
   color: #6D7F83;
 }
-/* line 44, ../scss/_autocomplete-theme-1.scss */
+/* line 56, ../scss/_autocomplete-theme-1.scss */
 .theme-1 .list-results {
   background: #948C75;
   border: 1em solid #99B2B7;
@@ -295,62 +300,84 @@ small {
   left: 0;
   width: 100%;
 }
-/* line 53, ../scss/_autocomplete-theme-1.scss */
+/* line 64, ../scss/_autocomplete-theme-1.scss */
 .theme-1 .list-results:not(:empty) {
   -webkit-box-shadow: 0 10px 6px -6px #777;
   -moz-box-shadow: 0 10px 6px -6px #777;
   box-shadow: 0 10px 6px -6px #777;
 }
-/* line 60, ../scss/_autocomplete-theme-1.scss */
+/* line 70, ../scss/_autocomplete-theme-1.scss */
 .theme-1 .list-results li {
   border-bottom: none;
 }
-/* line 62, ../scss/_autocomplete-theme-1.scss */
+/* line 72, ../scss/_autocomplete-theme-1.scss */
 .theme-1 .list-results li:last-of-type a {
   border-bottom: 0;
 }
-/* line 67, ../scss/_autocomplete-theme-1.scss */
+/* line 77, ../scss/_autocomplete-theme-1.scss */
 .theme-1 .list-results a {
   border-bottom: thin dashed #99B2B7;
   padding: 1em 0;
   margin-left: 1em;
   margin-right: 1em;
 }
-/* line 75, ../scss/_autocomplete-theme-1.scss */
+/* line 93, ../scss/_autocomplete-theme-1.scss */
+.theme-1 .result-name {
+  font-family: 'Droid Sans', Georgia, Times, serif;
+  font-size: 0.9em;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+  -webkit-transition: color 0.3s;
+  transition: color 0.3s;
+  width: 70%;
+}
+/* line 102, ../scss/_autocomplete-theme-1.scss */
+.theme-1 .result-name::after {
+  content: "";
+  display: inline-block;
+  font: normal normal normal 14px/1 FontAwesome;
+  font-size: "inherit";
+  text-rendering: auto;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  opacity: 0;
+  -moz-transition: opacity 0.3s, -moz-transform 0.3s;
+  -webkit-transition: opacity 0.3s, -webkit-transform 0.3s;
+  transition: opacity 0.3s, transform 0.3s;
+  -moz-transform: translateX(-5px) rotate(-15deg);
+  -webkit-transform: translateX(-5px) rotate(-15deg);
+  transform: translateX(-5px) rotate(-15deg);
+}
+/* line 114, ../scss/_autocomplete-theme-1.scss */
+.theme-1 .result-location {
+  text-align: right;
+  width: 29%;
+}
+/* line 119, ../scss/_autocomplete-theme-1.scss */
+.theme-1 .result-active {
+  color: #D9CEB2;
+}
+/* line 122, ../scss/_autocomplete-theme-1.scss */
+.theme-1 .result-active .result-name::after {
+  opacity: 1;
+  -moz-transform: translateX(0px) rotate(0);
+  -webkit-transform: translateX(0px) rotate(0);
+  transform: translateX(0px) rotate(0);
+}
+/* line 130, ../scss/_autocomplete-theme-1.scss */
 .theme-1 .result-name,
 .theme-1 .result-location {
   display: inline-block;
   vertical-align: middle;
 }
 @media (max-width: 500px) {
-  /* line 75, ../scss/_autocomplete-theme-1.scss */
+  /* line 130, ../scss/_autocomplete-theme-1.scss */
   .theme-1 .result-name,
   .theme-1 .result-location {
     display: block;
     text-align: left;
     width: 100%;
   }
-}
-/* line 87, ../scss/_autocomplete-theme-1.scss */
-.theme-1 .result-name {
-  font-family: 'Droid Sans', Georgia, Times, serif;
-  font-size: 0.9em;
-  letter-spacing: 0.1em;
-  text-transform: uppercase;
-  width: 70%;
-}
-/* line 95, ../scss/_autocomplete-theme-1.scss */
-.theme-1 .result-location {
-  text-align: right;
-  width: 29%;
-}
-/* line 100, ../scss/_autocomplete-theme-1.scss */
-.theme-1 .result-active {
-  color: #D9CEB2;
-}
-/* line 103, ../scss/_autocomplete-theme-1.scss */
-.theme-1 .result-active i {
-  display: inline-block;
 }
 
 /**
@@ -359,7 +386,7 @@ small {
 /* line 5, ../scss/_themes-menu.scss */
 .container-themes {
   text-align: center;
-  padding: 100px 0 0;
+  padding: 120px 0 0;
 }
 /* line 9, ../scss/_themes-menu.scss */
 .container-themes li {
@@ -371,24 +398,53 @@ small {
   display: block;
   margin: 0 0.5em;
   padding: 0.8em 0.4em;
+  position: relative;
   text-transform: uppercase;
-  transition: all 300ms ease;
-  -webkit-transition: all 300ms ease;
 }
-/* line 22, ../scss/_themes-menu.scss */
+/* line 21, ../scss/_themes-menu.scss */
+.container-themes a::after {
+  background: rgba(0, 0, 0, 0.1);
+  content: '';
+  left: 0;
+  height: 4px;
+  opacity: 0;
+  position: absolute;
+  top: 100%;
+  -moz-transition: opacity 0.3s, -moz-transform 0.3s;
+  -webkit-transition: opacity 0.3s, -webkit-transform 0.3s;
+  transition: opacity 0.3s, transform 0.3s;
+  -moz-transform: translateY(10px);
+  -webkit-transform: translateY(10px);
+  transform: translateY(10px);
+  width: 100%;
+}
+/* line 37, ../scss/_themes-menu.scss */
 .container-themes a:hover, .container-themes a:focus {
-  border-bottom: 2px solid #ccc;
   color: #ccc;
 }
-
-/* line 30, ../scss/_themes-menu.scss */
-.list-themes {
-  margin-bottom: 25px;
+/* line 40, ../scss/_themes-menu.scss */
+.container-themes a:hover::after, .container-themes a:focus::after {
+  opacity: 1;
+  -moz-transform: translateY(0px);
+  -webkit-transform: translateY(0px);
+  transform: translateY(0px);
 }
 
-/* line 35, ../scss/_themes-menu.scss */
+/* line 50, ../scss/_themes-menu.scss */
+.list-themes {
+  margin-bottom: 35px;
+}
+
+/* line 55, ../scss/_themes-menu.scss */
 .theme-active a, .theme-active a:hover, .theme-active a:focus {
-  border-bottom: 3px solid #99B2B7;
   color: #555;
   font-weight: bold;
+}
+/* line 58, ../scss/_themes-menu.scss */
+.theme-active a::after, .theme-active a:hover::after, .theme-active a:focus::after {
+  opacity: 1;
+  -webkit-transform: translateY(0px);
+  -moz-transform: translateY(0px);
+  transform: translateY(0px);
+  background: #99B2B7;
 }
