--- a/scss/_autocomplete-theme-1.scss
+++ b/scss/_autocomplete-theme-1.scss
@@ -49,6 +49,10 @@
     padding: 0 0 0.25em;
   }
 
+  .link-search {
+    display: none;
+  }
+
   ::-webkit-input-placeholder {
     color: $med-teal;
   }
