--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -20,7 +20,7 @@ a {
 
 .container {
   margin: 0 auto;
-  max-width: 95%;
+  max-width: 85%; // Ensure users can touch page around autocomplete on mobile
   width: 500px;
 }
 
