--- a/public/main.css
+++ b/public/main.css
@@ -93,7 +93,7 @@ a {
 /* line 21, ../scss/_base.scss */
 .container {
   margin: 0 auto;
-  max-width: 95%;
+  max-width: 85%;
   width: 500px;
 }
 
@@ -155,18 +155,18 @@ small {
 /**
  * _autocomplete.scss
  */
-/* line 16, ../scss/_autocomplete.scss */
+/* line 5, ../scss/_autocomplete.scss */
 .list-results {
   margin-bottom: 50px;
   position: absolute;
   z-index: 5;
 }
-/* line 21, ../scss/_autocomplete.scss */
+/* line 10, ../scss/_autocomplete.scss */
 .list-results a {
   display: block;
 }
 
-/* line 26, ../scss/_autocomplete.scss */
+/* line 15, ../scss/_autocomplete.scss */
 .form-search {
   position: relative;
 }
@@ -174,44 +174,57 @@ small {
 /**
  * _autocomplete-theme-0.scss
  */
-/* line 14, ../scss/_autocomplete-theme-0.scss */
+/* line 12, ../scss/_autocomplete-theme-0.scss */
 .theme-0 .list-results a:active, .theme-0 .list-results .result-selected a {
   color: #6D7F83;
+  color: #99B2B7;
   position: relative;
   top: 1px;
 }
 
-/* line 22, ../scss/_autocomplete-theme-0.scss */
+/* line 21, ../scss/_autocomplete-theme-0.scss */
 .theme-0 .input-search-container {
-  position: relative;
+  height: 40px;
 }
-/* line 24, ../scss/_autocomplete-theme-0.scss */
+/* line 23, ../scss/_autocomplete-theme-0.scss */
 .theme-0 .input-search-container::after {
-  content: "";
-  display: inline-block;
-  font: normal normal normal 14px/1 FontAwesome;
-  font-size: 1.5em;
-  text-rendering: auto;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-font-smoothing: antialiased;
-  color: #ccc;
-  position: absolute;
-  right: 7.5px;
-  height: 34px;
-  line-height: 34px;
-  vertical-align: middle;
-  top: 0;
-  width: 23px;
+  content: '';
+  clear: both;
 }
-/* line 37, ../scss/_autocomplete-theme-0.scss */
+/* line 28, ../scss/_autocomplete-theme-0.scss */
+.theme-0 .input-search,
+.theme-0 .link-search {
+  border: thin solid #ccc;
+  display: inline-block;
+  float: left;
+  height: 100%;
+  padding-top: 6px;
+  padding-bottom: 6px;
+}
+/* line 38, ../scss/_autocomplete-theme-0.scss */
 .theme-0 .input-search {
-  border-radius: 20px;
+  border-radius: 20px 0 0 20px;
+  border-right: 0;
   padding-left: 15px;
-  padding-right: 38px;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  padding-right: 0;
+  width: 92%;
 }
 /* line 45, ../scss/_autocomplete-theme-0.scss */
+.theme-0 .input-search:active ~ .link-search, .theme-0 .input-search:focus ~ .link-search {
+  color: #99B2B7;
+}
+/* line 51, ../scss/_autocomplete-theme-0.scss */
+.theme-0 .link-search {
+  border-radius: 0 20px 20px 0;
+  border-left: 0;
+  -moz-transition: color 0.2s ease;
+  -webkit-transition: color 0.2s ease;
+  transition: color 0.2s ease;
+  font-size: 1.2em;
+  text-align: center;
+  width: 8%;
+}
+/* line 62, ../scss/_autocomplete-theme-0.scss */
 .theme-0 .list-results {
   background: white;
   border: thin solid #ccc;
@@ -220,30 +233,30 @@ small {
   left: 4%;
   width: 92%;
 }
-/* line 53, ../scss/_autocomplete-theme-0.scss */
+/* line 70, ../scss/_autocomplete-theme-0.scss */
 .theme-0 .list-results li {
   border-bottom: thin solid #ccc;
 }
-/* line 57, ../scss/_autocomplete-theme-0.scss */
+/* line 74, ../scss/_autocomplete-theme-0.scss */
 .theme-0 .list-results a {
   padding: 1em;
 }
-/* line 70, ../scss/_autocomplete-theme-0.scss */
+/* line 87, ../scss/_autocomplete-theme-0.scss */
 .theme-0 .result {
   position: relative;
   -moz-transition: background 0.3s ease;
   -webkit-transition: background 0.3s ease;
   transition: background 0.3s ease;
 }
-/* line 77, ../scss/_autocomplete-theme-0.scss */
+/* line 94, ../scss/_autocomplete-theme-0.scss */
 .theme-0 .result-location {
   margin-left: 2px;
 }
-/* line 81, ../scss/_autocomplete-theme-0.scss */
+/* line 98, ../scss/_autocomplete-theme-0.scss */
 .theme-0 .result-active {
   background: #efefef;
 }
-/* line 84, ../scss/_autocomplete-theme-0.scss */
+/* line 101, ../scss/_autocomplete-theme-0.scss */
 .theme-0 .result-active .result-name {
   font-weight: bold;
 }
@@ -288,10 +301,14 @@ small {
   padding: 0 0 0.25em;
 }
 /* line 52, ../scss/_autocomplete-theme-1.scss */
+.theme-1 .link-search {
+  display: none;
+}
+/* line 56, ../scss/_autocomplete-theme-1.scss */
 .theme-1 ::-webkit-input-placeholder {
   color: #6D7F83;
 }
-/* line 56, ../scss/_autocomplete-theme-1.scss */
+/* line 60, ../scss/_autocomplete-theme-1.scss */
 .theme-1 .list-results {
   background: #948C75;
   border: 1em solid #99B2B7;
@@ -300,28 +317,28 @@ small {
   left: 0;
   width: 100%;
 }
-/* line 64, ../scss/_autocomplete-theme-1.scss */
+/* line 68, ../scss/_autocomplete-theme-1.scss */
 .theme-1 .list-results:not(:empty) {
   -webkit-box-shadow: 0 10px 6px -6px #777;
   -moz-box-shadow: 0 10px 6px -6px #777;
   box-shadow: 0 10px 6px -6px #777;
 }
-/* line 70, ../scss/_autocomplete-theme-1.scss */
+/* line 74, ../scss/_autocomplete-theme-1.scss */
 .theme-1 .list-results li {
   border-bottom: none;
 }
-/* line 72, ../scss/_autocomplete-theme-1.scss */
+/* line 76, ../scss/_autocomplete-theme-1.scss */
 .theme-1 .list-results li:last-of-type a {
   border-bottom: 0;
 }
-/* line 77, ../scss/_autocomplete-theme-1.scss */
+/* line 81, ../scss/_autocomplete-theme-1.scss */
 .theme-1 .list-results a {
   border-bottom: thin dashed #99B2B7;
   padding: 1em 0;
   margin-left: 1em;
   margin-right: 1em;
 }
-/* line 93, ../scss/_autocomplete-theme-1.scss */
+/* line 97, ../scss/_autocomplete-theme-1.scss */
 .theme-1 .result-name {
   font-family: 'Droid Sans', Georgia, Times, serif;
   font-size: 0.9em;
@@ -331,7 +348,7 @@ small {
   transition: color 0.3s;
   width: 70%;
 }
-/* line 102, ../scss/_autocomplete-theme-1.scss */
+/* line 106, ../scss/_autocomplete-theme-1.scss */
 .theme-1 .result-name::after {
   content: "";
   display: inline-block;
@@ -348,30 +365,30 @@ small {
   -webkit-transform: translateX(-5px) rotate(-15deg);
   transform: translateX(-5px) rotate(-15deg);
 }
-/* line 114, ../scss/_autocomplete-theme-1.scss */
+/* line 118, ../scss/_autocomplete-theme-1.scss */
 .theme-1 .result-location {
   text-align: right;
   width: 29%;
 }
-/* line 119, ../scss/_autocomplete-theme-1.scss */
+/* line 123, ../scss/_autocomplete-theme-1.scss */
 .theme-1 .result-active {
   color: #D9CEB2;
 }
-/* line 122, ../scss/_autocomplete-theme-1.scss */
+/* line 126, ../scss/_autocomplete-theme-1.scss */
 .theme-1 .result-active .result-name::after {
   opacity: 1;
   -moz-transform: translateX(0px) rotate(0);
   -webkit-transform: translateX(0px) rotate(0);
   transform: translateX(0px) rotate(0);
 }
-/* line 130, ../scss/_autocomplete-theme-1.scss */
+/* line 134, ../scss/_autocomplete-theme-1.scss */
 .theme-1 .result-name,
 .theme-1 .result-location {
   display: inline-block;
   vertical-align: middle;
 }
 @media (max-width: 500px) {
-  /* line 130, ../scss/_autocomplete-theme-1.scss */
+  /* line 134, ../scss/_autocomplete-theme-1.scss */
   .theme-1 .result-name,
   .theme-1 .result-location {
     display: block;
