--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -14,3 +14,13 @@ small {
   color: #ccc;
   font-size: 0.8em;
 }
+
+@mixin font-awesome-icon($content, $font-size: 'inherit') {
+  content: $content;
+  display: inline-block;
+  font: normal normal normal 14px/1 FontAwesome;
+  font-size: $font-size;
+  text-rendering: auto;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+}
