--- a/scss/_autocomplete.scss
+++ b/scss/_autocomplete.scss
@@ -15,3 +15,9 @@
 .form-search {
   position: relative;
 }
+
+.container-num-results {
+  line-height: 1.5em;
+  min-height: 1.5em;
+  text-align: right;
+}
