--- a/scss/_autocomplete-theme-0.scss
+++ b/scss/_autocomplete-theme-0.scss
@@ -1,4 +1,3 @@
-
 /**
  * _autocomplete-theme-0.scss
  */
@@ -10,10 +9,15 @@
  $width-input-search: 92%;
 
 %result-selected-t0 {
-  color: $med-teal;
   color: $light-teal;
   position: relative;
-  top: 1px; // For slight "depress"
+  .result-name::after {
+    opacity: 0;
+    -moz-transform: scale(1.15);
+    -webkit-transform: scale(1.15);
+    transform: scale(1.15);
+    z-index: 2;
+  }
 }
 
 .theme-0 {
@@ -105,7 +109,19 @@
     background: #efefef;
 
     .result-name {
+      display: inline-block;
+      position: relative;
       font-weight: bold;
+      &::after {
+        content: attr(data-name);
+        left: 0;
+        position: absolute;
+        top: 0;
+        -moz-transition: opacity 0.9s ease, -moz-transform 0.6s ease;
+        -webkit-transition: opacity 0.9s ease, -webkit-transform 0.6s ease;
+        transition: opacity 0.9s ease, transform 0.6s ease;
+        z-index: -1; // "hide" it to avoid weird blur on original text
+      }
     }
   }
 }
