--- a/public/main.css
+++ b/public/main.css
@@ -181,35 +181,21 @@ small {
 /**
  * _autocomplete-theme-0.scss
  */
-/* line 11, ../scss/_autocomplete-theme-0.scss */
-.theme-0 .list-results a:active, .theme-0 .list-results .result-selected a {
-  color: #99B2B7;
-  position: relative;
-}
-/* line 14, ../scss/_autocomplete-theme-0.scss */
-.theme-0 .list-results a:active .result-name::after, .theme-0 .list-results .result-selected a .result-name::after {
-  opacity: 0;
-  -moz-transform: scale(1.15);
-  -webkit-transform: scale(1.15);
-  transform: scale(1.15);
-  z-index: 2;
-}
-
-/* line 25, ../scss/_autocomplete-theme-0.scss */
+/* line 13, ../scss/_autocomplete-theme-0.scss */
 .theme-0 .container-num-results {
   font-style: italic;
   padding-right: 20px;
 }
-/* line 30, ../scss/_autocomplete-theme-0.scss */
+/* line 18, ../scss/_autocomplete-theme-0.scss */
 .theme-0 .input-search-container {
   height: 40px;
 }
-/* line 32, ../scss/_autocomplete-theme-0.scss */
+/* line 20, ../scss/_autocomplete-theme-0.scss */
 .theme-0 .input-search-container::after {
   content: '';
   clear: both;
 }
-/* line 38, ../scss/_autocomplete-theme-0.scss */
+/* line 26, ../scss/_autocomplete-theme-0.scss */
 .theme-0 .input-search,
 .theme-0 .link-search {
   border: thin solid #ccc;
@@ -219,7 +205,7 @@ small {
   padding-top: 6px;
   padding-bottom: 6px;
 }
-/* line 48, ../scss/_autocomplete-theme-0.scss */
+/* line 36, ../scss/_autocomplete-theme-0.scss */
 .theme-0 .input-search {
   border-radius: 20px 0 0 20px;
   border-right: 0;
@@ -227,11 +213,11 @@ small {
   padding-right: 0;
   width: 92%;
 }
-/* line 55, ../scss/_autocomplete-theme-0.scss */
+/* line 43, ../scss/_autocomplete-theme-0.scss */
 .theme-0 .input-search:active ~ .link-search, .theme-0 .input-search:focus ~ .link-search {
   color: #99B2B7;
 }
-/* line 61, ../scss/_autocomplete-theme-0.scss */
+/* line 49, ../scss/_autocomplete-theme-0.scss */
 .theme-0 .link-search {
   border-radius: 0 20px 20px 0;
   border-left: 0;
@@ -242,7 +228,7 @@ small {
   text-align: center;
   width: 8%;
 }
-/* line 72, ../scss/_autocomplete-theme-0.scss */
+/* line 60, ../scss/_autocomplete-theme-0.scss */
 .theme-0 .list-results {
   background: white;
   border: thin solid #ccc;
@@ -251,35 +237,35 @@ small {
   left: 4%;
   width: 92%;
 }
-/* line 80, ../scss/_autocomplete-theme-0.scss */
+/* line 68, ../scss/_autocomplete-theme-0.scss */
 .theme-0 .list-results li {
   border-bottom: thin solid #ccc;
 }
-/* line 84, ../scss/_autocomplete-theme-0.scss */
+/* line 72, ../scss/_autocomplete-theme-0.scss */
 .theme-0 .list-results a {
   padding: 1em;
 }
-/* line 97, ../scss/_autocomplete-theme-0.scss */
+/* line 77, ../scss/_autocomplete-theme-0.scss */
 .theme-0 .result {
   position: relative;
   -moz-transition: background 0.3s ease;
   -webkit-transition: background 0.3s ease;
   transition: background 0.3s ease;
 }
-/* line 104, ../scss/_autocomplete-theme-0.scss */
+/* line 84, ../scss/_autocomplete-theme-0.scss */
 .theme-0 .result-location {
   margin-left: 2px;
 }
-/* line 108, ../scss/_autocomplete-theme-0.scss */
+/* line 88, ../scss/_autocomplete-theme-0.scss */
 .theme-0 .result-active {
   background: #efefef;
 }
-/* line 111, ../scss/_autocomplete-theme-0.scss */
+/* line 91, ../scss/_autocomplete-theme-0.scss */
 .theme-0 .result-active .result-name {
   display: inline-block;
   position: relative;
 }
-/* line 114, ../scss/_autocomplete-theme-0.scss */
+/* line 94, ../scss/_autocomplete-theme-0.scss */
 .theme-0 .result-active .result-name::after {
   content: attr(data-name);
   left: 0;
@@ -290,39 +276,45 @@ small {
   transition: opacity 0.9s ease, transform 0.6s ease;
   z-index: -1;
 }
+/* line 108, ../scss/_autocomplete-theme-0.scss */
+.theme-0 .result-selected a {
+  color: #99B2B7;
+  position: relative;
+}
+/* line 112, ../scss/_autocomplete-theme-0.scss */
+.theme-0 .result-selected .result-name::after {
+  opacity: 0;
+  -moz-transform: scale(1.15);
+  -webkit-transform: scale(1.15);
+  transform: scale(1.15);
+  z-index: 2;
+}
 
 /**
  * _autocomplete-theme-1.scss
  *
  * Palette: http://www.colourlovers.com/palette/77121/Good_Friends
  */
-/* line 21, ../scss/_autocomplete-theme-1.scss */
-.theme-1 .list-results a:active .result-name::after, .theme-1 .list-results .result-selected a .result-name::after {
-  -moz-transform: translateX(10px) rotate(360deg);
-  -webkit-transform: translateX(10px) rotate(360deg);
-  transform: translateX(10px) rotate(360deg);
-}
-
-/* line 29, ../scss/_autocomplete-theme-1.scss */
+/* line 19, ../scss/_autocomplete-theme-1.scss */
 .theme-1 {
   font-family: 'Droid Serif', Georgia, Times, serif;
 }
-/* line 32, ../scss/_autocomplete-theme-1.scss */
+/* line 22, ../scss/_autocomplete-theme-1.scss */
 .theme-1 small {
   color: #D5DED9;
 }
-/* line 36, ../scss/_autocomplete-theme-1.scss */
+/* line 26, ../scss/_autocomplete-theme-1.scss */
 .theme-1 .container-num-results {
   padding-right: 2em;
 }
-/* line 40, ../scss/_autocomplete-theme-1.scss */
+/* line 30, ../scss/_autocomplete-theme-1.scss */
 .theme-1 .input-search-container {
   background: #99B2B7;
   display: inline-block;
   padding: 1em 1em 0;
   width: 100%;
 }
-/* line 47, ../scss/_autocomplete-theme-1.scss */
+/* line 37, ../scss/_autocomplete-theme-1.scss */
 .theme-1 .input-search {
   background: transparent;
   border: none;
@@ -334,15 +326,15 @@ small {
   line-height: 1.2em;
   padding: 0 0 0.25em;
 }
-/* line 59, ../scss/_autocomplete-theme-1.scss */
+/* line 49, ../scss/_autocomplete-theme-1.scss */
 .theme-1 .link-search {
   display: none;
 }
-/* line 63, ../scss/_autocomplete-theme-1.scss */
+/* line 53, ../scss/_autocomplete-theme-1.scss */
 .theme-1 ::-webkit-input-placeholder {
   color: #6D7F83;
 }
-/* line 67, ../scss/_autocomplete-theme-1.scss */
+/* line 57, ../scss/_autocomplete-theme-1.scss */
 .theme-1 .list-results {
   background: #948C75;
   border: 1em solid #99B2B7;
@@ -351,28 +343,28 @@ small {
   left: 0;
   width: 100%;
 }
-/* line 75, ../scss/_autocomplete-theme-1.scss */
+/* line 65, ../scss/_autocomplete-theme-1.scss */
 .theme-1 .list-results:not(:empty) {
   -webkit-box-shadow: 0 10px 6px -6px #777;
   -moz-box-shadow: 0 10px 6px -6px #777;
   box-shadow: 0 10px 6px -6px #777;
 }
-/* line 81, ../scss/_autocomplete-theme-1.scss */
+/* line 71, ../scss/_autocomplete-theme-1.scss */
 .theme-1 .list-results li {
   border-bottom: none;
 }
-/* line 83, ../scss/_autocomplete-theme-1.scss */
+/* line 73, ../scss/_autocomplete-theme-1.scss */
 .theme-1 .list-results li:last-of-type a {
   border-bottom: 0;
 }
-/* line 88, ../scss/_autocomplete-theme-1.scss */
+/* line 78, ../scss/_autocomplete-theme-1.scss */
 .theme-1 .list-results a {
   border-bottom: thin dashed #99B2B7;
   padding: 1em 0;
   margin-left: 1em;
   margin-right: 1em;
 }
-/* line 104, ../scss/_autocomplete-theme-1.scss */
+/* line 86, ../scss/_autocomplete-theme-1.scss */
 .theme-1 .result-name {
   font-family: 'Droid Sans', Georgia, Times, serif;
   font-size: 0.9em;
@@ -382,7 +374,7 @@ small {
   transition: color 0.3s;
   width: 70%;
 }
-/* line 113, ../scss/_autocomplete-theme-1.scss */
+/* line 95, ../scss/_autocomplete-theme-1.scss */
 .theme-1 .result-name::after {
   content: "";
   display: inline-block;
@@ -399,30 +391,36 @@ small {
   -webkit-transform: translateX(-5px) rotate(-15deg);
   transform: translateX(-5px) rotate(-15deg);
 }
-/* line 125, ../scss/_autocomplete-theme-1.scss */
+/* line 107, ../scss/_autocomplete-theme-1.scss */
 .theme-1 .result-location {
   text-align: right;
   width: 29%;
 }
-/* line 130, ../scss/_autocomplete-theme-1.scss */
+/* line 112, ../scss/_autocomplete-theme-1.scss */
 .theme-1 .result-active {
   color: #D9CEB2;
 }
-/* line 133, ../scss/_autocomplete-theme-1.scss */
+/* line 115, ../scss/_autocomplete-theme-1.scss */
 .theme-1 .result-active .result-name::after {
   opacity: 1;
   -moz-transform: translateX(0px) rotate(0);
   -webkit-transform: translateX(0px) rotate(0);
   transform: translateX(0px) rotate(0);
 }
-/* line 141, ../scss/_autocomplete-theme-1.scss */
+/* line 124, ../scss/_autocomplete-theme-1.scss */
+.theme-1 .result-selected .result-name::after {
+  -moz-transform: translateX(10px) rotate(360deg);
+  -webkit-transform: translateX(10px) rotate(360deg);
+  transform: translateX(10px) rotate(360deg);
+}
+/* line 131, ../scss/_autocomplete-theme-1.scss */
 .theme-1 .result-name,
 .theme-1 .result-location {
   display: inline-block;
   vertical-align: middle;
 }
 @media (max-width: 500px) {
-  /* line 141, ../scss/_autocomplete-theme-1.scss */
+  /* line 131, ../scss/_autocomplete-theme-1.scss */
   .theme-1 .result-name,
   .theme-1 .result-location {
     display: block;
