--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,6 +2,11 @@
  * main.scss
  */
 
+/* Compass mixins/utils */
+@import "compass/css3/transition";
+@import "compass/css3/transform";
+@import "compass/css3/box-shadow";
+
 /* Resets & base components */
 @import "reset";
 @import "base";
