--- a/public/main.css
+++ b/public/main.css
@@ -2,6 +2,7 @@
 /**
  * main.scss
  */
+/* Compass mixins/utils */
 /* Resets & base components */
 /**
  * _reset.css
@@ -262,32 +263,35 @@ small {
 }
 /* line 91, ../scss/_autocomplete-theme-0.scss */
 .theme-0 .result-active .result-name {
-  display: inline-block;
   position: relative;
 }
-/* line 94, ../scss/_autocomplete-theme-0.scss */
+/* line 93, ../scss/_autocomplete-theme-0.scss */
 .theme-0 .result-active .result-name::after {
+  -moz-transition: opacity 0.9s ease, -moz-transform 0.6s ease;
+  -o-transition: opacity 0.9s ease, -o-transform 0.6s ease;
+  -webkit-transition: opacity 0.9s ease, -webkit-transform 0.6s ease;
+  transition: opacity 0.9s ease, transform 0.6s ease;
   content: attr(data-name);
+  display: table;
+  font-size: 0;
   left: 0;
   position: absolute;
   top: 0;
-  -moz-transition: opacity 0.9s ease, -moz-transform 0.6s ease;
-  -webkit-transition: opacity 0.9s ease, -webkit-transform 0.6s ease;
-  transition: opacity 0.9s ease, transform 0.6s ease;
-  z-index: -1;
+  height: 0;
 }
-/* line 108, ../scss/_autocomplete-theme-0.scss */
+/* line 107, ../scss/_autocomplete-theme-0.scss */
 .theme-0 .result-selected a {
   color: #99B2B7;
   position: relative;
 }
-/* line 112, ../scss/_autocomplete-theme-0.scss */
+/* line 111, ../scss/_autocomplete-theme-0.scss */
 .theme-0 .result-selected .result-name::after {
-  opacity: 0;
   -moz-transform: scale(1.15);
+  -ms-transform: scale(1.15);
   -webkit-transform: scale(1.15);
   transform: scale(1.15);
-  z-index: 2;
+  opacity: 0;
+  font-size: inherit;
 }
 
 /**
@@ -295,26 +299,26 @@ small {
  *
  * Palette: http://www.colourlovers.com/palette/77121/Good_Friends
  */
-/* line 19, ../scss/_autocomplete-theme-1.scss */
+/* line 20, ../scss/_autocomplete-theme-1.scss */
 .theme-1 {
   font-family: 'Droid Serif', Georgia, Times, serif;
 }
-/* line 22, ../scss/_autocomplete-theme-1.scss */
+/* line 23, ../scss/_autocomplete-theme-1.scss */
 .theme-1 small {
   color: #D5DED9;
 }
-/* line 26, ../scss/_autocomplete-theme-1.scss */
+/* line 27, ../scss/_autocomplete-theme-1.scss */
 .theme-1 .container-num-results {
   padding-right: 2em;
 }
-/* line 30, ../scss/_autocomplete-theme-1.scss */
+/* line 31, ../scss/_autocomplete-theme-1.scss */
 .theme-1 .input-search-container {
   background: #99B2B7;
   display: inline-block;
   padding: 1em 1em 0;
   width: 100%;
 }
-/* line 37, ../scss/_autocomplete-theme-1.scss */
+/* line 38, ../scss/_autocomplete-theme-1.scss */
 .theme-1 .input-search {
   background: transparent;
   border: none;
@@ -326,15 +330,15 @@ small {
   line-height: 1.2em;
   padding: 0 0 0.25em;
 }
-/* line 49, ../scss/_autocomplete-theme-1.scss */
+/* line 50, ../scss/_autocomplete-theme-1.scss */
 .theme-1 .link-search {
   display: none;
 }
-/* line 53, ../scss/_autocomplete-theme-1.scss */
+/* line 54, ../scss/_autocomplete-theme-1.scss */
 .theme-1 ::-webkit-input-placeholder {
   color: #6D7F83;
 }
-/* line 57, ../scss/_autocomplete-theme-1.scss */
+/* line 58, ../scss/_autocomplete-theme-1.scss */
 .theme-1 .list-results {
   background: #948C75;
   border: 1em solid #99B2B7;
@@ -343,38 +347,40 @@ small {
   left: 0;
   width: 100%;
 }
-/* line 65, ../scss/_autocomplete-theme-1.scss */
+/* line 66, ../scss/_autocomplete-theme-1.scss */
 .theme-1 .list-results:not(:empty) {
-  -webkit-box-shadow: 0 10px 6px -6px #777;
   -moz-box-shadow: 0 10px 6px -6px #777;
+  -webkit-box-shadow: 0 10px 6px -6px #777;
   box-shadow: 0 10px 6px -6px #777;
 }
-/* line 71, ../scss/_autocomplete-theme-1.scss */
+/* line 70, ../scss/_autocomplete-theme-1.scss */
 .theme-1 .list-results li {
   border-bottom: none;
 }
-/* line 73, ../scss/_autocomplete-theme-1.scss */
+/* line 72, ../scss/_autocomplete-theme-1.scss */
 .theme-1 .list-results li:last-of-type a {
   border-bottom: 0;
 }
-/* line 78, ../scss/_autocomplete-theme-1.scss */
+/* line 77, ../scss/_autocomplete-theme-1.scss */
 .theme-1 .list-results a {
   border-bottom: thin dashed #99B2B7;
   padding: 1em 0;
   margin-left: 1em;
   margin-right: 1em;
 }
-/* line 86, ../scss/_autocomplete-theme-1.scss */
+/* line 85, ../scss/_autocomplete-theme-1.scss */
 .theme-1 .result-name {
+  -moz-transition: color 0.3s;
+  -o-transition: color 0.3s;
+  -webkit-transition: color 0.3s;
+  transition: color 0.3s;
   font-family: 'Droid Sans', Georgia, Times, serif;
   font-size: 0.9em;
   letter-spacing: 0.1em;
   text-transform: uppercase;
-  -webkit-transition: color 0.3s;
-  transition: color 0.3s;
   width: 70%;
 }
-/* line 95, ../scss/_autocomplete-theme-1.scss */
+/* line 93, ../scss/_autocomplete-theme-1.scss */
 .theme-1 .result-name::after {
   content: "";
   display: inline-block;
@@ -383,44 +389,50 @@ small {
   text-rendering: auto;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
-  opacity: 0;
   -moz-transition: opacity 0.3s, -moz-transform 0.3s;
+  -o-transition: opacity 0.3s, -o-transform 0.3s;
   -webkit-transition: opacity 0.3s, -webkit-transform 0.3s;
   transition: opacity 0.3s, transform 0.3s;
   -moz-transform: translateX(-5px) rotate(-15deg);
+  -ms-transform: translateX(-5px) rotate(-15deg);
   -webkit-transform: translateX(-5px) rotate(-15deg);
   transform: translateX(-5px) rotate(-15deg);
+  opacity: 0;
 }
-/* line 107, ../scss/_autocomplete-theme-1.scss */
+/* line 101, ../scss/_autocomplete-theme-1.scss */
 .theme-1 .result-location {
+  font-size: 0.8em;
+  margin-left: -0.4em;
   text-align: right;
-  width: 29%;
+  width: 30%;
 }
-/* line 112, ../scss/_autocomplete-theme-1.scss */
+/* line 108, ../scss/_autocomplete-theme-1.scss */
 .theme-1 .result-active {
   color: #D9CEB2;
 }
-/* line 115, ../scss/_autocomplete-theme-1.scss */
+/* line 111, ../scss/_autocomplete-theme-1.scss */
 .theme-1 .result-active .result-name::after {
-  opacity: 1;
   -moz-transform: translateX(0px) rotate(0);
+  -ms-transform: translateX(0px) rotate(0);
   -webkit-transform: translateX(0px) rotate(0);
   transform: translateX(0px) rotate(0);
+  opacity: 1;
 }
-/* line 124, ../scss/_autocomplete-theme-1.scss */
+/* line 118, ../scss/_autocomplete-theme-1.scss */
 .theme-1 .result-selected .result-name::after {
   -moz-transform: translateX(10px) rotate(360deg);
+  -ms-transform: translateX(10px) rotate(360deg);
   -webkit-transform: translateX(10px) rotate(360deg);
   transform: translateX(10px) rotate(360deg);
 }
-/* line 131, ../scss/_autocomplete-theme-1.scss */
+/* line 123, ../scss/_autocomplete-theme-1.scss */
 .theme-1 .result-name,
 .theme-1 .result-location {
   display: inline-block;
   vertical-align: middle;
 }
 @media (max-width: 500px) {
-  /* line 131, ../scss/_autocomplete-theme-1.scss */
+  /* line 123, ../scss/_autocomplete-theme-1.scss */
   .theme-1 .result-name,
   .theme-1 .result-location {
     display: block;
@@ -452,6 +464,14 @@ small {
 }
 /* line 21, ../scss/_themes-menu.scss */
 .container-themes a::after {
+  -moz-transition: opacity 0.3s, -moz-transform 0.3s;
+  -o-transition: opacity 0.3s, -o-transform 0.3s;
+  -webkit-transition: opacity 0.3s, -webkit-transform 0.3s;
+  transition: opacity 0.3s, transform 0.3s;
+  -moz-transform: translateY(10px);
+  -ms-transform: translateY(10px);
+  -webkit-transform: translateY(10px);
+  transform: translateY(10px);
   background: rgba(0, 0, 0, 0.1);
   content: '';
   left: 0;
@@ -459,41 +479,37 @@ small {
   opacity: 0;
   position: absolute;
   top: 100%;
-  -moz-transition: opacity 0.3s, -moz-transform 0.3s;
-  -webkit-transition: opacity 0.3s, -webkit-transform 0.3s;
-  transition: opacity 0.3s, transform 0.3s;
-  -moz-transform: translateY(10px);
-  -webkit-transform: translateY(10px);
-  transform: translateY(10px);
   width: 100%;
 }
-/* line 37, ../scss/_themes-menu.scss */
+/* line 33, ../scss/_themes-menu.scss */
 .container-themes a:hover, .container-themes a:focus {
   color: #ccc;
 }
-/* line 40, ../scss/_themes-menu.scss */
+/* line 36, ../scss/_themes-menu.scss */
 .container-themes a:hover::after, .container-themes a:focus::after {
-  opacity: 1;
   -moz-transform: translateY(0px);
+  -ms-transform: translateY(0px);
   -webkit-transform: translateY(0px);
   transform: translateY(0px);
+  opacity: 1;
 }
 
-/* line 50, ../scss/_themes-menu.scss */
+/* line 44, ../scss/_themes-menu.scss */
 .list-themes {
   margin-bottom: 35px;
 }
 
-/* line 55, ../scss/_themes-menu.scss */
+/* line 49, ../scss/_themes-menu.scss */
 .theme-active a, .theme-active a:hover, .theme-active a:focus {
   color: #555;
   font-weight: bold;
 }
-/* line 58, ../scss/_themes-menu.scss */
+/* line 52, ../scss/_themes-menu.scss */
 .theme-active a::after, .theme-active a:hover::after, .theme-active a:focus::after {
-  opacity: 1;
-  -webkit-transform: translateY(0px);
   -moz-transform: translateY(0px);
+  -ms-transform: translateY(0px);
+  -webkit-transform: translateY(0px);
   transform: translateY(0px);
+  opacity: 1;
   background: #99B2B7;
 }
