--- a/scss/_autocomplete-theme-0.scss
+++ b/scss/_autocomplete-theme-0.scss
@@ -89,17 +89,16 @@
     background: #efefef;
 
     .result-name {
-      display: inline-block; //TODO
       position: relative;
       &::after {
+        @include transition(opacity 0.9s ease, transform 0.6s ease);
         content: attr(data-name);
+        display: table; // Fill parent width while parent is display: inline (to keep .result-location sibling inline)
+        font-size: 0; // "hide" it to avoid weird blur on original text. Hiding via display won't render transition
         left: 0;
         position: absolute;
         top: 0;
-        -moz-transition: opacity 0.9s ease, -moz-transform 0.6s ease;
-        -webkit-transition: opacity 0.9s ease, -webkit-transform 0.6s ease;
-        transition: opacity 0.9s ease, transform 0.6s ease;
-        z-index: -1; // "hide" it to avoid weird blur on original text
+        height: 0;
       }
     }
   }
@@ -110,11 +109,9 @@
       position: relative;
     }
     .result-name::after {
+      @include transform(scale(1.15));
       opacity: 0;
-      -moz-transform: scale(1.15);
-      -webkit-transform: scale(1.15);
-      transform: scale(1.15);
-      z-index: 2;
+      font-size: inherit;
     }
   }
 }
