--- a/scss/_themes-menu.scss
+++ b/scss/_themes-menu.scss
@@ -19,6 +19,8 @@
     text-transform: uppercase;
 
     &::after {
+      @include transition(opacity 0.3s, transform 0.3s);
+      @include transform(translateY(10px));
       background: rgba(0,0,0,0.1);
       content: '';
       left: 0;
@@ -26,22 +28,14 @@
       opacity: 0;
       position: absolute;
       top: 100%;
-      -moz-transition: opacity 0.3s, -moz-transform 0.3s;
-      -webkit-transition: opacity 0.3s, -webkit-transform 0.3s;
-      transition: opacity 0.3s, transform 0.3s;
-      -moz-transform: translateY(10px);
-      -webkit-transform: translateY(10px);
-      transform: translateY(10px);
       width: 100%;
     }
     &:hover,
     &:focus {
       color: #ccc;
       &::after {
+        @include transform(translateY(0px));
         opacity: 1;
-        -moz-transform: translateY(0px);
-        -webkit-transform: translateY(0px);
-        transform: translateY(0px);
       }
     }
   }
@@ -56,10 +50,8 @@
     color: #555;
     font-weight: bold;
     &::after {
+      @include transform(translateY(0px));
       opacity: 1;
-      -webkit-transform: translateY(0px);
-      -moz-transform: translateY(0px);
-      transform: translateY(0px);
       background: #99B2B7;
     }
   }
