--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,6 +6,7 @@
 @import "compass/css3/transition";
 @import "compass/css3/transform";
 @import "compass/css3/box-shadow";
+@import "compass/css3/user-interface";
 
 /* Resets & base components */
 @import "reset";
