--- a/scss/_autocomplete-theme-1.scss
+++ b/scss/_autocomplete-theme-1.scss
@@ -45,14 +45,14 @@
     font-size: 1em;
     line-height: 1.2em;
     padding: 0 0 0.25em;
+    
+    @include input-placeholder {
+      color: $med-teal;
+    }
   }
 
   .link-search {
     display: none;
-  }
-
-  ::-webkit-input-placeholder {
-    color: $med-teal;
   }
 
   .list-results {
