--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -3,9 +3,7 @@
  */
 
 * {
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
+  @include box-sizing(border-box);
 }
 
 body {
